  constructed from the summary cache.

- -nobackground command-line switch did not actually work.

- Title bar "modified" indicator was not displayed for recovered
  autosave files.

- jEdit never closed streams of XML files being read in. This bug has
  been there for ages, however its not too major since the stream
  objects would get garbage collected and closed eventually.

}}}
{{{ API Changes

- Added a new dynamic menu API, so that plugins using the 4.2 plugin API
  can provide dynamic menus. Simply write an implementation of
  org.gjt.sp.jedit.menu.DynamicMenuProvider

- EditPlugin.start() is always called from the AWT thread now.

- Added a method to bsh.NameSpace:

  addCommandPath(String path, Class clas)

  You can call this on BeanShell.getNameSpace(). BeanShell will search
  for resources named path + methodName + ".bsh" in the class loader of
  the given class when an undeclared method is invoked. Plugins can use
  this to provide additional scripting commands, the Console plugin uses
  this for example.

}}}

}}}

{{{ Version 4.2pre1

Thanks to Bill McMilleon, Kasper Graversen, Kris Kopicki,
Oliver Rutherfurd, Rudi Widmann and Ryan Grove for contributing to this
release.

{{{ Editing

- Quick copy now more consistent with usual mouse behavior:

  - Control-middle-clicking on a bracket will insert the contents of the
    bracketed block at the caret position.

  - Shift-middle-clicking at a point will insert text from the caret to
    the point at the caret position. Can be used to duplicate a line,
    for example.

- Register contents are now saved across editing sessions in
  ~/.jedit/registers.xml.

- Complete Word popup now has keyboard shortcuts (1 - 0) for inserting
  the first 10 elements in the list.

- Entering a prefix while a JTextComponent has focus will move focus to
  the text area. This allows shortcuts like C+e n n to be used from the
  search bar and such without having to prefix them with C+e C+e first.
